k8s/namespace-2-backend/mood-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mood-svc
  namespace: backend
  labels:
    app: mood
spec:
  type: ClusterIP
  selector:
    app: mood
  ports:
    - port: 8082
      targetPort: 8082
      name: http
