k8s/namespace-2-backend/reactions-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactions-svc
  namespace: backend
  labels:
    app: reactions
spec:
  type: ClusterIP
  selector:
    app: reactions
  ports:
    - port: 8081
      targetPort: 8081
      name: http
